--- a/base.css
+++ b/base.css
@@ -5,7 +5,7 @@ body {
   overflow: hidden;
 }
 
-.text {
+/* .text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@ body {
   margin: 0;
   flex-direction: column;
   text-align: center;
-}
+} */
 
 h1 {
   color: #171A1C;
