--- a/base.css
+++ b/base.css
@@ -2,26 +2,17 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
+  background-color: #171A1C;
+  color: #fff;
 }
 
-/* .text {
+.text {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  flex-direction: column;
-  text-align: center;
-} */
+  justify-content: left;
+}
 
 h1 {
-  color: #171A1C;
   height: 1rem;
-}
-
-p {
-  color: #ccc;
 }
 
 @media screen and (max-width: 749px) {
