--- a/base.css
+++ b/base.css
@@ -8,11 +8,24 @@ body {
 
 .text {
   display: flex;
+  flex-direction: column;
   justify-content: left;
 }
 
 h1 {
   height: 1rem;
+}
+
+ul {
+  margin-top: 1rem;
+}
+
+ul li:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.strikethrough {
+  text-decoration: line-through;
 }
 
 @media screen and (max-width: 749px) {
