--- a/base.css
+++ b/base.css
@@ -16,11 +16,13 @@ h1 {
   height: 1rem;
 }
 
-ul {
-  margin-top: 1rem;
+ul li:first-child,
+ol li:first-child {
+  margin-top: -1rem;
 }
 
-ul li:not(:last-child) {
+ul li:not(:last-child),
+ol li:not(:last-child) {
   margin-bottom: 1rem;
 }
 
