--- a/base.css
+++ b/base.css
@@ -4,16 +4,13 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #171A1C;
   color: #fff;
+  margin-bottom: 4rem;
 }
 
 .text {
   display: flex;
   flex-direction: column;
   justify-content: left;
-}
-
-h1 {
-  height: 1rem;
 }
 
 ul li:first-child,
@@ -28,6 +25,10 @@ ol li:not(:last-child) {
 
 .strikethrough {
   text-decoration: line-through;
+}
+
+.margin-top {
+  margin-top: 2rem;
 }
 
 @media screen and (max-width: 749px) {
