--- a/base.css
+++ b/base.css
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   justify-content: left;
   padding-left: 2rem;
-  margin-top: 1.1.rem;
+  margin-top: 1.1rem;
 }
 
 h1 {
